--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,16 @@
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +19,26 @@
   html {
     font-size: 16px !important;
   }
+}
+
+.btn {
+  @apply px-6 py-2.5 text-center text-navlinksm md:text-navlink lowercase font-medium transition-colors cursor-pointer rounded-md inline-block leading-none;
+}
+
+.btn-sm {
+  @apply py-1 px-4 text-xl md:text-2xl;
+}
+
+.btn-primary {
+  @apply bg-primary text-body border-2 border-primary hover:bg-white;
+}
+
+.btn-black {
+  @apply bg-body text-white border-2 border-body hover:bg-transparent hover:text-body;
+}
+
+.btn-white {
+  @apply bg-white text-body border-2 border-white hover:bg-transparent hover:text-body;
 }
 
 .text-base-clamp {
@@ -32,6 +65,35 @@
   line-height: 1;
 }
 
+.headroom {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+  @apply bg-white;
+}
+.headroom--unfixed {
+  position: relative;
+  transform: translateY(0);
+}
+.headroom--scrolled {
+  transition: transform 200ms ease-in-out;
+}
+.headroom--unpinned {
+  position: fixed;
+  transform: translateY(-100%);
+}
+.headroom--pinned {
+  position: fixed;
+  transform: translateY(0%);
+}
+
+.is-open {
+  > div {
+    transform: translateY(0) !important;
+  }
+}
+
 .link-active {
   svg {
     opacity: 1;
@@ -40,4 +102,12 @@
   &.btn svg {
     opacity: 0.6;
   }
+}
+
+.section {
+  @apply my-12 md:my-28;
+}
+
+.section-bg {
+  @apply py-12 md:py-28;
 }
