--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,9 +16,9 @@ select:-webkit-autofill:focus {
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-size: 16px !important;
-  }
+  /* html {
+    font-size: 62.5% !important;
+  } */
 }
 
 .btn {
