--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ select:-webkit-autofill:focus {
 }
 
 .btn {
-  @apply px-6 py-2.5 text-center text-navlinksm md:text-navlink lowercase font-medium transition-colors cursor-pointer rounded-md inline-block leading-none;
+  @apply inline-block cursor-pointer rounded-md px-6 py-2.5 text-center text-navlinksm font-medium lowercase leading-none transition-colors md:text-navlink;
 }
 
 .btn-sm {
@@ -30,15 +30,15 @@ select:-webkit-autofill:focus {
 }
 
 .btn-primary {
-  @apply bg-primary text-body border-2 border-primary hover:bg-white;
+  @apply border-2 border-primary bg-primary text-body hover:bg-transparent;
 }
 
 .btn-black {
-  @apply bg-body text-white border-2 border-body hover:bg-transparent hover:text-body;
+  @apply border-2 border-body bg-body text-white hover:bg-transparent hover:text-body;
 }
 
 .btn-white {
-  @apply bg-white text-body border-2 border-white hover:bg-transparent hover:text-body;
+  @apply border-2 border-white bg-white text-body hover:bg-transparent hover:text-body;
 }
 
 .text-base-clamp {
@@ -110,4 +110,19 @@ select:-webkit-autofill:focus {
 
 .section-bg {
   @apply py-12 md:py-28;
+}
+
+.image-container {
+  width: 100%;
+
+  > span {
+    position: unset !important;
+  }
+
+  .image {
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+  }
 }
